Revert "Update method of setting max height for content to fix issues on mobile browsers"
This reverts commit 62f4e6331a5328d0e5a934ee4f53f2f341a8238c.

--- a/_sass/theme/_base.scss
+++ b/_sass/theme/_base.scss
@@ -2,11 +2,6 @@
   box-sizing: border-box;
 }
 
-html, body {
-  height: 100%;
-  min-height: 100%;
-}
-
 html {
   font-size: 16px;
 }
@@ -15,6 +10,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: $base-font-family;
+  height: 100vh;
   margin: 0;
 }
 
